blackroad-sf/force-app/main/default/objects/AgentRelationship__c/AgentRelationship__c.object-meta.xml
<CustomObject>
    <label>Agent Relationship</label>
    <pluralLabel>Agent Relationships</pluralLabel>
    <nameField>
        <label>Bond Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Agent bond strength and relationship graph. LUCIDIA↔ECHO 95%, ALICE↔OCTAVIA 88%, etc.</description>
</CustomObject>