blackroad-sf/force-app/main/default/objects/AgentRelationship__c/fields/AgentA__c.field-meta.xml
<CustomField>
    <fullName>AgentA__c</fullName>
    <label>Agent A</label>
    <type>Lookup</type>
        <referenceTo>Agent__c</referenceTo>
        <relationshipName>AgentA</relationshipName>
    
</CustomField>