blackroad-sf/force-app/main/default/objects/AgentRelationship__c/fields/AgentB__c.field-meta.xml
<CustomField>
    <fullName>AgentB__c</fullName>
    <label>Agent B</label>
    <type>Lookup</type>
        <referenceTo>Agent__c</referenceTo>
        <relationshipName>AgentB</relationshipName>
    
</CustomField>