blackroad-sf/force-app/main/default/objects/AgentRelationship__c/fields/BondStrength__c.field-meta.xml
<CustomField>
    <fullName>BondStrength__c</fullName>
    <label>Bond Strength %</label>
    <type>Percent</type>
        <precision>5</precision>
        <scale>1</scale>
    
</CustomField>