blackroad-sf/force-app/main/default/objects/AgentRelationship__c/fields/Interactions__c.field-meta.xml
<CustomField>
    <fullName>Interactions__c</fullName>
    <label>Interactions</label>
    <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    
</CustomField>