blackroad-sf/force-app/main/default/objects/AgentRelationship__c/fields/LastContact__c.field-meta.xml
<CustomField>
    <fullName>LastContact__c</fullName>
    <label>Last Contact</label>
    <type>DateTime</type>
    
</CustomField>