blackroad-sf/force-app/main/default/objects/AgentRelationship__c/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <type>Text</type>
        <length>200</length>
    
</CustomField>